# education

./: README.md
Lesson1-ext/task1/: task1.cpp  task1.sln  task1.vcxproj
Lesson1-ext/task2/: task2.cpp  task2.sln  task2.vcxproj
Lesson10/Task2/: CMakeLists.txt  Paralelogram.h  Task3.cpp
Lesson10/my_first_cmake_project/: CMakeLists.txt  my_first_cmake_program.cpp
Lesson11/Task2/: Leaver.cpp  Leaver.h  Task2.sln  Task2.vcxproj
Lesson11/task1/: Greeter.cpp  Greeter.h  task1.sln  task1.vcxproj
Lesson11/task3/: CMakeLists.txt  Leaver.cpp  Leaver.h  bye.cpp  bye.vcxproj.filters
Lesson11/task4/: CMakeLists.txt  Figura.cpp  Figura.h  Paralelogram.h  Pramoug.h  Task3.cpp  Task3.vcxproj.filters  Triple_ravnostor.cpp  quad.h
Lesson2-ext/task1/: task1.cpp  task1.sln  task1.vcxproj
Lesson2/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson2/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson2/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson3-ext/task1/: task1.cpp  task1.sln  task1.vcxproj
Lesson3-ext/task2/: task2.cpp  task2.sln  task2.vcxproj
Lesson3/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson3/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson4-ext/task1/: CMakeLists.txt  task1.h  test.cpp
Lesson4-ext/task2/: CMakeLists.txt  task1.cpp  task1.h  test.cpp
Lesson4/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson4/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson5-ext/task1/: task1.sln
Lesson5-ext/task2/: task2.sln
Lesson5/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson5/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson5/Task3/: Task3.cpp  Task3.sln  Task3.vcxproj
Lesson6-ext/task1/: task1.sln
Lesson6-ext/task2/: task2.sln
Lesson6-ext/task3/: task3.sln
Lesson6/Task1/: Calculator.cpp  Calculator.h  Header.h  Source.cpp  Task1.cpp  Task1.sln  Task1.vcxproj  Task1.vcxproj.filters
Lesson6/Task3/: Figura.cpp  Figura.h  Four.cpp  Four.h  Paralelogram.cpp  Paralelogram.h  Pramoug.cpp  Pramoug.h  Romb.cpp  Romb.h  Task3.cpp  Task3.sln  Task3.vcxproj  Triple.cpp  Triple.h  Triple_pramoug.cpp  Triple_pramoug.h  Triple_ravnobed.cpp  Triple_ravnobed.h  Triple_ravnostor.cpp  Triple_ravnostor.h  quad.cpp  quad.h
Lesson6/task2/: Counter.cpp  Counter.h  Source.cpp  schet.h  task2.cpp  task2.sln  task2.vcxproj  task2.vcxproj.filters
Lesson7-ext/task1/: task1.sln
Lesson7-ext/task2/: task2.sln
Lesson7/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson7/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
Lesson8-ext/task1/: task1.sln
Lesson8-ext/task2/: task2.sln
Lesson8/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson8/Task2/: Exception.cpp  Exception.h  Figura.cpp  Figura.h  Four.cpp  Four.h  Paralelogram.cpp  Paralelogram.h  Pramoug.cpp  Pramoug.h  Romb.cpp  Romb.h  Task3.cpp  Task3.vcxproj  Task3.vcxproj.filters  Triple.cpp  Triple.h  Triple_pramoug.cpp  Triple_pramoug.h  Triple_ravnobed.cpp  Triple_ravnobed.h  Triple_ravnostor.cpp  Triple_ravnostor.h  quad.cpp  quad.h
Lesson9-ext/task1/: task1.sln
Lesson9-ext/task2/: task2.sln
Lesson9/Task1/: Task1.cpp  Task1.sln  Task1.vcxproj
Lesson9/Task2/: Task2.cpp  Task2.sln  Task2.vcxproj
QT1/qt/: CMakeLists.txt  main.cpp
QT2/build-untitled1-Desktop_Qt_6_4_2_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT2/untitled1/: CMakeLists.txt  main.cpp
QT2/untitled2/: CMakeLists.txt  main.cpp
QT3/untitled1/: CMakeLists.txt  mainwindow.ui
SQL/task4/: CMakeLists.txt  task4.cpp
SQL/task5/: Book.cpp  Book.h  Publisher.cpp  Publisher.h  Sale.cpp  Sale.h  Shop.cpp  Shop.h  Stock.cpp  Stock.h  main.cpp  task5.sln  task5.vcxproj  task5.vcxproj.filters
algo-Less5/task1/: task1.cpp  task1.sln  task1.vcxproj
algo-Less5/task2/: task2.cpp  task2.sln  task2.vcxproj
algo-Less6/task1/: task1.cpp  task1.sln  task1.vcxproj
algo-Less6/task2/: task2.cpp  task2.sln  task2.vcxproj
algo-Less6/task3/: task3.cpp  task3.sln  task3.vcxproj
algo-Less7/task1/: task1.sln
algo-Less7/task2/: task2.sln
algo-Less7/task3/: task3.sln
map5/: docke_file.txt  test.cpp
(+172 files in other folders)
